[project]
name = "rag-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "flashrank>=0.2.10",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-experimental>=0.4.2",
    "langchain-neo4j>=0.10.0",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langsmith>=0.9.0",
    "neo4j>=6.2.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "streamlit>=1.58.0",
]
